--- a/Section31/Swipe Project/index.html
+++ b/Section31/Swipe Project/index.html
@@ -13,27 +13,63 @@
     <title>Swipe</title>
   </head>
   <body>
-    <h1>Heading 1</h1>
-    <h2>Heading 2</h2>
-    <h3>Heading 3</h3>
-    <h4>Heading 4</h4>
-    <h5>Heading 5</h5>
-    <h6>Heading 6</h6>
-    <a href="#">Click Me</a>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur
-      voluptatibus repudiandae magni soluta numquam minima pariatur eos? Minus
-      nemo corporis amet aliquam quo accusamus voluptatibus quam odit, facere
-      temporibus sit!
-    </p>
-    <button class="primary-button">CLICK ME</button>
-    <button class="secondary-button with-icon">
-      CLICK ME
-      <img src="assets/arrow-right-dark.svg" alt="" />
-    </button>
-    <button class="primary-button with-icon">
-      Click Me!
-      <img src="assets/arrow-right-light.svg" alt="" />
-    </button>
+    <!-- Navbar -->
+    <nav class="navbar">
+      <img src="assets/logo-white.svg" alt="Swipe inc." />
+      <ul class="menu">
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Solutions</a></li>
+        <li><a href="#">Developers</a></li>
+        <li><a href="#">Resources</a></li>
+        <li><a href="#">Pricing</a></li>
+      </ul>
+
+      <button class="primary-button navbar-button">Sign In</button>
+    </nav>
+
+    <main>
+      <!-- Hero -->
+      <div class="hero">
+        <div class="section-container two-column">
+          <div class="col-left">
+            <h1>Payments infrastructure for the world</h1>
+            <p>
+              Tons of companies all over the world use Swipe's seamless platform
+              to manage their business's entire financial transaction
+              infrastructure online.
+            </p>
+            <div class="button-container">
+              <button class="primary-button with-icon">
+                Start now
+                <img src="assets/arrow-right-light.svg" alt="" />
+              </button>
+              <button class="secondary-button with-icon">
+                Contact sales
+                <img src="assets/arrow-right-purple.svg" alt="" />
+              </button>
+            </div>
+          </div>
+          <div class="col-right hero-phone-container">
+            <img class="hero-phone" src="assets/hero-phone.png" alt="" />
+          </div>
+        </div>
+      </div>
+
+      <!-- Partners Section -->
+      <div class="partners-section">
+        <div class="section-container">
+          <div class="partners-grid">
+            <img src="assets/instacart.png" alt="Instacart" />
+            <img src="assets/salesforce.png" alt="Salesforce" />
+            <img src="assets/amazon.png" alt="Amazon" />
+            <img src="assets/slack.png" alt="Slack" />
+            <img src="assets/shopify.png" alt="Shopify" />
+            <img src="assets/google.png" alt="Google" />
+            <img src="assets/lyft.png" alt="Lyft" />
+            <img src="assets/zoom.png" alt="Zoom" />
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
