--- a/Section31/Swipe Project/index.html
+++ b/Section31/Swipe Project/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,10 +13,11 @@
     <link rel="stylesheet" href="style.css" />
     <title>Swipe</title>
   </head>
+
   <body>
     <!-- Navbar -->
     <nav class="navbar">
-      <img src="assets/logo-white.svg" alt="Swipe inc." />
+      <img src="assets/logo-white.svg" alt="Swipe, inc." />
       <ul class="menu">
         <li><a href="#">Products</a></li>
         <li><a href="#">Solutions</a></li>
@@ -26,16 +28,17 @@
 
       <button class="primary-button navbar-button">Sign In</button>
     </nav>
-
     <main>
-      <!-- Hero -->
+      <!-- GRADIENT BACKGROUND -->
+      <canvas id="gradient-canvas"></canvas>
+      <!-- Hero Section -->
       <div class="hero">
         <div class="section-container two-column">
           <div class="col-left">
             <h1>Payments infrastructure for the world</h1>
             <p>
-              Tons of companies all over the world use Swipe's seamless platform
-              to manage their business's entire financial transaction
+              Tons of companies all over the world use Swipe’s seamless platform
+              to manage their businesses's entire financial transaction
               infrastructure online.
             </p>
             <div class="button-container">
@@ -54,7 +57,6 @@
           </div>
         </div>
       </div>
-
       <!-- Partners Section -->
       <div class="partners-section">
         <div class="section-container">
@@ -70,21 +72,21 @@
           </div>
         </div>
       </div>
-
-      <!-- Unified Platform Section -->
+      <!-- UNIFIED PLATFORM -->
       <div class="unified-platform-section">
         <div class="section-container">
-          <p class="subtitle">Unified Platform</p>
+          <p class="subtitle">Unified platform</p>
           <h2>All the payment products you'll ever need</h2>
+
           <div class="two-column">
             <div class="col-left">
               <p>
                 We've got everything you'll need and more to build websites and
-                apps that handle payments,payouts and much more. Swipe's
+                apps that handle payments, payouts, and much more. Swipe’s
                 products power payments for
-                <a href="#">all kinds of retailers</a>,
-                <a href="#">all kinds of businesses</a>,
-                <a href="#">software platforms & marketplaces</a>, and
+                <a href="#"> all kinds of retailers</a>,
+                <a href="#"> all kinds of businesses</a>,
+                <a href="#"> software platforms & marketplaces</a>, and
                 everything in between.
               </p>
             </div>
@@ -104,8 +106,7 @@
           </button>
         </div>
       </div>
-
-      <!-- Graphic Grid Section -->
+      <!-- GRAPHIC GRID SECTION -->
       <div class="graphic-section">
         <div class="section-container">
           <div class="graphic-grid">
@@ -117,25 +118,26 @@
         </div>
       </div>
 
-      <!-- Integrations Section -->
+      <!-- INTEGRATIONS SECTION -->
       <div class="integrations-section">
         <div class="section-container two-column">
           <div class="col-left">
             <p class="subtitle2">Designed For Engineers</p>
-            <h2>The world's best and most intuitive APIs</h2>
+            <h2>The world’s best and most intuitive APIs</h2>
             <p>
-              We abstract the hard stuff away so your teams can focus on
+              We abstract the hard stuff away so your teams don't can focus on
               building good technology, instead of spending time and money
               reinventing the wheel.
             </p>
+
             <button class="primary-button with-icon">
               Start now
               <img src="assets/arrow-right-dark.svg" alt="" />
             </button>
-            <!-- card container -->
+
             <div class="card-container">
               <div class="card">
-                <img class="icon" src="assets/tools-icon.png" alt="" />
+                <img src="assets/tools-icon.png" alt="" class="icon" />
                 <h3>Tools for all stacks</h3>
                 <p class="secondary-text">
                   We offer front end and back end libraries in some of the most
@@ -147,11 +149,11 @@
                 </button>
               </div>
               <div class="card">
-                <img class="icon" src="assets/cube-icon.png" alt="" />
-                <h3>Custom integrations</h3>
+                <img src="assets/cube-icon.png" alt="" class="icon" />
+                <h3>Custom Integrations</h3>
                 <p class="secondary-text">
-                  Use integrations for systems like
-                  Shopify,WooCommerce,NetSuite, and more.
+                  Use integrations for systems like Shopify, WooCommerce,
+                  NetSuite, and more.
                 </p>
                 <button class="secondary-button with-icon">
                   Explore partners
@@ -167,7 +169,7 @@
         </div>
       </div>
 
-      <!-- Why Swipe Section -->
+      <!-- WHY SWIPE SECTION -->
       <div class="why-swipe-section">
         <div class="section-container">
           <p class="subtitle">Why Swipe</p>
@@ -175,20 +177,20 @@
           <div class="card-container">
             <div class="card">
               <img src="assets/cloud-icon.png" alt="" class="icon" />
-              <h3>Efficient always</h3>
+              <h3>Efficient Always</h3>
               <p class="secondary-text">
                 We've optimized every level of the finance stack, from
-                integrations to prebuilt checkout flows - no details has been
+                integrations to prebuilt checkout flows - no detail has been
                 spared.
               </p>
             </div>
             <div class="card">
               <img src="assets/cycle-icon.png" alt="" class="icon" />
-              <h3>Fast improving</h3>
+              <h3>Fast-Improving</h3>
               <p class="secondary-text">
                 We make constant updates and improvements to help you stay on
-                the cutting edge of your industry,deploying to production around
-                20X per day!
+                the cutting edge of your industry, deploying to production
+                around 20X per day!
               </p>
             </div>
             <div class="card">
@@ -197,12 +199,12 @@
               <p class="secondary-text">
                 Our systems operate with 100% uptime, with scalability and
                 uptime as a guarantee. Swipe is super duper certified so don't
-                worry.
+                worry
               </p>
             </div>
             <div class="card">
               <img src="assets/bars-icon.png" alt="" class="icon" />
-              <h3>Crazy optimized</h3>
+              <h3>Crazy Optimized</h3>
               <p class="secondary-text">
                 We use machine learning trained on billions of data points to
                 help optimize all products, from fraud to revenue recovery and
@@ -213,51 +215,48 @@
         </div>
       </div>
 
-      <!-- Global Section -->
       <div class="global-section">
         <div class="section-container">
           <div class="two-column">
             <div class="col-left">
-              <p class="subtitle2">Global Scale</p>
+              <p class="subtitle2">Global scale</p>
               <h2>A structure for global businesses</h2>
               <p>
-                Swipe makes moving money simple,borderless and programmable -
+                Swipe makes moving money simple, borderless, and programmable -
                 just like the rest of the internet. We have teams all over the
                 world and we process billions and billions of dollars yearly for
-                <a href="#">startups,Fortune 500s,and everything in between.</a>
+                <a href="#"
+                  >startups, Fortune 500s, and everything in between.</a
+                >
               </p>
             </div>
             <div class="col-right">
-              <img
-                id="globe"
-                src="assets/global-graphic.png"
-                alt="global-graphic"
-              />
+              <img id="globe" src="assets/global-graphic.png" alt="" />
             </div>
           </div>
           <div class="card-container">
             <div class="card">
               <h3>250M+</h3>
               <p class="secondary-text">
-                API requests each day,peaking at 15,000 requests a second.
+                API requests each day, peaking at 15,000 requests a second.
               </p>
             </div>
             <div class="card">
               <h3>97%</h3>
               <p class="secondary-text">
-                of US adults have bought from businesses that use Swipe.
+                of US adults have bought from businesses that use Swipe
               </p>
             </div>
             <div class="card">
               <h3>135+</h3>
               <p class="secondary-text">
-                currencies and payment methods supported.
+                currencies and payment methods supported
               </p>
             </div>
             <div class="card">
               <h3>35+</h3>
               <p class="secondary-text">
-                countries with local acquiring,optimizing acceptance rates.
+                countries with local, acquiring, optimizing acceptance rates
               </p>
             </div>
           </div>
@@ -268,7 +267,7 @@
       <div class="virtual-events-section">
         <div class="section-container two-column">
           <div class="col-left">
-            <p class="subtitle">Virtual Events</p>
+            <p class="subtitle">Virtual events</p>
             <h2>Check out Sessions now!</h2>
             <p>
               Swipe Sessions is our annual conference - it's now available to
@@ -278,7 +277,7 @@
             </p>
             <button class="primary-button with-icon">
               Start now
-              <img src="assets/arrow-right-light.svg" alt="" />
+              <img src="assets/arrow-right-light.svg" />
             </button>
           </div>
           <div class="col-right">
@@ -306,6 +305,101 @@
           </div>
         </div>
       </div>
+
+      <!-- GETTING STARTED SECTION -->
+      <div class="getting-started-section">
+        <div class="section-container two-column">
+          <div class="col-left">
+            <h2>What are you waiting for?</h2>
+            <p>
+              Explore <a href="#">Swipe</a> now, or create an account and start
+              accepting payments today! If you need a custom package for your
+              business, let's chat today.
+            </p>
+            <button class="primary-button with-icon">
+              Start now
+              <img src="assets/arrow-right-light.svg" alt="" />
+            </button>
+          </div>
+          <div class="col-right">
+            <div class="card">
+              <img src="assets/shield-icon.png" alt="" class="icon" />
+              <h3>Always know what you pay</h3>
+              <p class="secondary-text">
+                Integrated per-transaction pricing with no hidden fees.
+              </p>
+
+              <button class="secondary-button with-icon">
+                Pricing details
+                <img src="assets/arrow-right-purple.svg" alt="" />
+              </button>
+            </div>
+            <div class="card">
+              <img src="assets/bars-icon.png" alt="" class="icon" />
+              <h3>Start your integration</h3>
+              <p class="secondary-text">
+                Get up and running with Stripe in as little as 10 minutes.
+              </p>
+
+              <button class="secondary-button with-icon">
+                API reference
+                <img src="assets/arrow-right-purple.svg" alt="" />
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <div class="section-container">
+          <div class="col">
+            <img src="assets/logo-dark.svg" alt="" id="footer-logo" />
+            <div class="icon-link">
+              <img src="assets/location-icon.png" alt="" />
+              <a href="#">United States</a>
+            </div>
+            <div class="icon-link">
+              <img src="assets/comment-icon.png" alt="" />
+              <a href="#">English (United States)</a>
+            </div>
+          </div>
+          <div class="col">
+            <h3>Products</h3>
+            <ul>
+              <li><a href="#">Atlas</a></li>
+              <li><a href="#">Billing</a></li>
+              <li><a href="#">Invoicing</a></li>
+              <li><a href="#">Payments</a></li>
+              <li><a href="#">Checkout</a></li>
+              <li><a href="#">Identity</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Use Cases</h3>
+            <ul>
+              <li><a href="#">eCommerce</a></li>
+              <li><a href="#">SaaS</a></li>
+              <li><a href="#">Marketplace</a></li>
+              <li><a href="#">Embedded Finance</a></li>
+              <li><a href="#">Crypto</a></li>
+              <li><a href="#">Creator Economy</a></li>
+            </ul>
+          </div>
+          <div class="col">
+            <h3>Resources</h3>
+            <ul>
+              <li><a href="#">Support Center</a></li>
+              <li><a href="#">Guides</a></li>
+              <li><a href="#">Blog</a></li>
+              <li><a href="#">Licenses</a></li>
+              <li><a href="#">Privacy & Terms</a></li>
+              <li><a href="#">Cookie Settings</a></li>
+            </ul>
+          </div>
+        </div>
+      </footer>
     </main>
+
+    <script src="gradient.js"></script>
   </body>
 </html>
