--- a/Section31/Swipe Project/index.html
+++ b/Section31/Swipe Project/index.html
@@ -25,7 +25,12 @@
         <li><a href="#">Resources</a></li>
         <li><a href="#">Pricing</a></li>
       </ul>
-
+      <!-- Hamburger Button -->
+      <div class="hamburger-button">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
       <button class="primary-button navbar-button">Sign In</button>
     </nav>
     <main>
